Fixing spacing and layout

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,18 @@
-/* .feed{
-    display: flex; 
-} */
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    /* background-color: #ff806f5b; */
+    background-color: #2e8a545b;
+}
 
 .feed_items{
-    padding-left: 215px;
+   display: flex;
+   flex-direction: column-reverse;
+}
+
+.card{
+    align-self:center
 }
